refactor: indus-owned buyer/fulfillment tokens
